crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__if__dangling_else.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/if/dangling_else.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (if
      true
      (if
         false
         (print "bad")
         (print "good"))
      ∅)
   (if
      false
      (if
         true
         (print "bad")
         (print "bad"))
      ∅))

----- stderr -----
