crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__if__if.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/if/if.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (if
      true
      (print "good")
      ∅)
   (if
      false
      (print "bad")
      ∅)
   (if
      true
      (block
         (print "block"))
      ∅)
   (var a (global @1) false)
   (if
      (= (global a @1) true)
      (print (global a @1))
      ∅))

----- stderr -----
